src/test/ui/parser/keyword-type-as-identifier.stderr
error: expected pattern, found keyword `type`
  --> $DIR/keyword-type-as-identifier.rs:4:9
   |
LL |     let type = "foo";
   |         ^^^^ expected pattern

error: aborting due to previous error

